--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -16,5 +16,19 @@ header {
     font-size: 4rem;
     letter-spacing: -0.1rem;
     margin-top: 1rem;
+    margin-bottom: 2rem;
+  }
+  div .fa {
+    font-size: 2rem;
+
+
+  }
+  .icon-circle {
+    border: .25rem $color-primary solid;
+    border-radius: 50%;
+    width: 2rem;
+    padding: 1rem;
+    display: inline-block;
+    margin: 0 .25rem;
   }
 }
