--- a/scss/_main-area.scss
+++ b/scss/_main-area.scss
@@ -15,4 +15,15 @@ main {
   .icon-img {
     padding-top: 2rem;
   }
+  .description {
+    margin-top: 3rem;
+  }
+  h1 {
+    letter-spacing: .05rem;
+    margin-bottom: 2.6rem;
+  }
+  p {
+    letter-spacing: .15rem;
+    margin-bottom: 6.5rem;
+  }
 }
