page matches example

--- a/scss/_main-area.scss
+++ b/scss/_main-area.scss
@@ -1,5 +1,9 @@
 main {
-  margin: 5rem 2rem 0 2rem;
+  // margin: 5rem 2rem 0 2rem;
+  .main-box {
+    margin: 5rem 2rem 0 2rem;
+
+  }
   .fa {
     font-size: 8rem;
     background: $color-background;
