--- a/scss/_nav-icons.scss
+++ b/scss/_nav-icons.scss
@@ -2,9 +2,18 @@
   color: $color-secondary;
   font-size: 3rem;
   margin-top: 7rem;
+  height: 5rem;
   .nav-icons {
     display: inline;
     padding: 1.5rem 4.25rem;
     border: 1px solid $color-secondary;
+    border-bottom: 2px solid $color-primary;
+  }
+  .nav-icon-selected {
+    display: inline;
+    padding: 1.5rem 4.25rem;
+    border-top: 4px solid $color-primary;
+    border-right: 2px solid $color-primary;
+    color: $color-primary;
   }
 }
