--- a/scss/_nav-icons.scss
+++ b/scss/_nav-icons.scss
@@ -14,6 +14,8 @@
     padding: 1.5rem 4.25rem;
     border-top: 4px solid $color-primary;
     border-right: 2px solid $color-primary;
+    border-left: 2px solid $color-primary;
+
     color: $color-primary;
   }
 }
