--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,32 +2,29 @@ header {
   width: 70%;
   margin: 5.5rem auto 0 auto;
   h2 {
-    letter-spacing: 0.8rem;
-    font-size: 2rem;
+    letter-spacing: 0.2rem;
+    font-size: 1rem;
     display: inline;
   }
   .fa {
-    font-size: 1.5rem;
+    font-size: .5rem;
     vertical-align: top;
   }
-
   p {
-    font-size: 4rem;
-    letter-spacing: -0.1rem;
-    margin-top: 1rem;
+    font-size: 1.6rem;
+    letter-spacing: .1rem;
+    margin-top: .5rem;
     margin-bottom: 2rem;
   }
   div .fa {
-    font-size: 2rem;
-
-
+    font-size: .5rem;
   }
   .icon-circle {
     border: .25rem $color-primary solid;
     border-radius: 50%;
-    width: 2rem;
-    padding: 1rem;
+    padding: .5rem;
     display: inline-block;
-    margin: 0 .25rem;
+    margin: 0 auto;
+    font-size: .5rem;
   }
 }
