--- a/scss/_main-area.scss
+++ b/scss/_main-area.scss
@@ -1,30 +1,31 @@
 main {
   // margin: 5rem 2rem 0 2rem;
   .main-box {
-    margin: 5rem 2rem 0 2rem;
+    margin: 1rem 2rem 0 2rem;
 
   }
   .fa {
-    font-size: 8rem;
+    font-size: 3rem;
     background: $color-background;
     border-radius: 50%;
-    padding: 5rem;
+    padding: 3rem;
   }
   .card {
     background: $color-primary;
-    width: 68%;
-    height: 22rem;
+    width: 21rem;
+    height: 11.5rem;
     margin: 0 auto;
   }
   .icon-img {
-    padding-top: 2rem;
+    padding-top: 1.3rem;
   }
-  .description {
-    margin-top: 3rem;
-  }
+
   h1 {
-    letter-spacing: .05rem;
+    font-size: 1rem;
+    letter-spacing: .1rem;
     margin-bottom: 2.6rem;
+    margin-top: 2rem;
+    margin-bottom: 1.4rem;
   }
   p {
     letter-spacing: .15rem;
