--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,3 +1,8 @@
 $color-primary: #47A3DA;
 $color-secondary: #CCCCCC;
 $color-background: #FFFFFF;
+
+// @mixin mixname($local-variable) {
+//     property: value;
+//     property: $local-variable;
+// }
