--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,5 +3,10 @@ body {
   color: $color-primary;
   font-family: sans-serif;
   text-align: center;
-    
+
+}
+@media (min-width: 510px) {
+  body {
+    margin: .5rem 0;
+  }
 }
