--- a/scss/_nav-icons.scss
+++ b/scss/_nav-icons.scss
@@ -12,18 +12,26 @@
   .nav-icon-selected {
     display: inline;
     padding: 1rem 2rem;
-    border-top: 4px solid $color-primary;
+    border-top: 3px solid $color-primary;
     border-right: 2px solid $color-primary;
     border-left: 2px solid $color-primary;
     border-bottom: 5px solid $color-background;
     color: $color-primary;
   }
-  @media (min-width: 510px) {
-    .navigation {
-      border-bottom: 2px solid $color-primary;
-    }
+
+
+  }
+
+@media (min-width: 510px) {
+    // .navigation {
+    //   border-bottom: 2px solid $color-primary;
+    // }
     .nav-icons {
-      border-bottom: 2px solid $color-primary;
-    }
+      border-bottom: 2px solid transparent;
+      margin: .25rem;
+  }
+  nav {
+    padding-bottom: 1rem;
+    border-bottom: 2px solid $color-primary
   }
 }
